...
            size = 20.dp)
        DropdownMenu(expanded = showPrivacyHelp, onDismissRequest = onHelpDismiss) {
          DropdownMenuItem(
              modifier = Modifier.testTag(UiTestTags.TAG_PRIVACY_HELP_MENU),
              text = {
                Text(
                    "Private: Only your app uses your location to center the map" +
                        " — it won’t be shown to others.\n" +
                        "Public: Your location is displayed on the public map" +
                        " so others can discover you.",
                    style = typography.bodySmall.copy(fontFamily = NotoSans),
                    color = colors.onSurface)
              },
              onClick = onHelpDismiss)
        }
...
